--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,7 @@
-<h1>Wellcome to bookfit</h1>
-<p>sign up here</p>
-<%= link_to "about", about_path %>
+<div class="jumbotron center">
+     <h1>Welcome to my app!</h1>
+     <p>
+       <%= link_to "Log in", "#", class: "btn btn-default btn-lg" %>
+       <%= link_to "Sign up", "#", class: "btn btn-primary btn-lg" %>
+  </p>    
+</div>
